# shared_autonomy_manipulation

./: .travis.yml  README.md
safe_teleop_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
safe_teleop_base/include/safe_teleop_base/: safe_trajectory_planner_ros.h
safe_teleop_base/src/: safe_trajectory_planner_ros.cpp
safe_teleop_pr2/: CHANGELOG.rst  CMakeLists.txt  package.xml
safe_teleop_stage/: CHANGELOG.rst  CMakeLists.txt  package.xml
safe_teleop_stage/launch/: safe_teleop_stage.rviz
