<package>
  <name>safe_teleop_pr2</name>
  <version>0.0.0</version>
  <description>
     Launch files for running safe_teleop_base on pr2
  </description>
  <maintainer email="foo@foo.com">Charles DuHadway (maintained by Benjamin Pitzer)</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/safe_teleop_pr2</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>safe_teleop_base</build_depend>
  <build_depend>pr2_teleop</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>safe_teleop_base</run_depend>
  <run_depend>pr2_teleop</run_depend>
  <run_depend>joy</run_depend>
</package>


