<package>
  <name>safe_teleop_stage</name>
  <version>0.0.0</version>
  <description>
     Demo of safe_teleop in stage
  </description>
  <maintainer email="foo@foo.com">Charles DuHadway (maintained by Benjamin Pitzer)</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/safe_teleop_stage</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>safe_teleop_base</build_depend>
  <build_depend>stage</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>safe_teleop_base</run_depend>
  <run_depend>stage</run_depend>
  <run_depend>joy</run_depend>
</package>


